src/changelog/snapshots/changesette__changelog__entries__tests__indents_multi_line_bodies.snap
---
source: src/changelog/entries.rs
expression: "render(&[entry(&[12],\n\"First line of body\\nsecond line of body\\n\\nline after a blank line\",)],\nSome(\"iorate/ublacklist\"),)"
---
## 10.1.0

### Minor Changes

- [#12](https://github.com/iorate/ublacklist/pull/12) - First line of body
  second line of body

  line after a blank line
