src/changelog/snapshots/changesette__changelog__entries__tests__orders_groups_and_omits_empty_ones.snap
---
source: src/changelog/entries.rs
expression: "render(&entries, Some(\"iorate/ublacklist\"))"
---
## 10.1.0

### Major Changes

- [#12](https://github.com/iorate/ublacklist/pull/12) - Major change

### Patch Changes

- [#23](https://github.com/iorate/ublacklist/pull/23) - First patch change

- Second patch change
