src/changelog/snapshots/changesette__changelog__entries__tests__renders_an_entry_without_prs.snap
---
source: src/changelog/entries.rs
expression: "render(&[entry(&[], \"Add SERPINFO satellites support\")],\nSome(\"iorate/ublacklist\"),)"
---
## 10.1.0

### Minor Changes

- Add SERPINFO satellites support
